Applying Model - Persiannlp - on comments

--- a/Sentiment_Analysis_on_Comments.ipynb
+++ b/Sentiment_Analysis_on_Comments.ipynb
@@ -404,6 +404,289 @@
       "source": [
         "df_sentiment.info()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4_mRpcTnLgGT"
+      },
+      "source": [
+        "# Model :\n",
+        " ## Persiannlp - MT5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 324,
+          "referenced_widgets": [
+            "1f55587dfe634d0fb1f471b5219ef800",
+            "c97a4e9b64fb445da584bf647a7ea95d",
+            "afbeea060c2f4d3aae88636980b535c6",
+            "8c181d93f3134fc4bccfdbc4fda76108",
+            "72a38f341338447bad8aa8833c5cb6dc",
+            "cf071e0536384dfc942eba2990b54704",
+            "733b00517c9149c0959e63cc7dc0236e",
+            "5b9e312b02444ddf9b6f5f8172e9ffc6",
+            "b3e8b56091da401b9242519e514f90d0",
+            "7b3cb856c5704359840c603298a63fd4",
+            "f24a7e48b98e4942bf4c2b97b0fc3c89",
+            "709a8cc4da114c79afa190079e13f4ca",
+            "77dcc1448eea459893fd063f5abca3f2",
+            "aae0e3a8071841478c21af407d2969b4",
+            "9a373b94e5b844cfac160e5ed7c7e0de",
+            "e53d2b8cbfac4ff8b112daf1409546de",
+            "8dd8a8c14f544ce79bac558f1567851c",
+            "fb3bb344a9cf4222810befc14f51c667",
+            "f8f7697f81404a838527bb9513cdb457",
+            "e53373fdf1d94febb55bab48a2254bfd",
+            "4ebdb08c3f3747fdb092513f3c2f97c9",
+            "de441225de5d45f69b57265a45f56353",
+            "5453c3b86d914d099a8ee027348e7f5a",
+            "7a9e767735484932b6d37eccb12682d8",
+            "d03bde6f887145549ad6e4e8055a4067",
+            "cfbb53d7f36641a2b999e6f36f357326",
+            "618a75d688f842c49f7c555a287eded0",
+            "03ce2a79d4dc4293875ce14ff308a100",
+            "4c0b6a766e984224a86af413487706ba",
+            "db35356383144dcbbb8c1b170780119f",
+            "26c859f666f74ae99df0098ae65d70aa",
+            "0367b3b52b074825aecc57c777d66cd7",
+            "b0312f5a4f2740f9882dca3492396873",
+            "c5475fbeb0e642128f2d7e7fcb63f5f2",
+            "94297b9553b049989a696d7e9e3afdfd",
+            "7caf7452729f49cc959908f95f97a857",
+            "875e9cc3b4b641e3ace13454cb83748f",
+            "93bc74a2ced749e9ac4f94bff6a970c4",
+            "b36ea22bac834ad98874de2860ab608f",
+            "c1cfd8be55324eecbd4970e629f4182c",
+            "b9978dff925e4b8d9393407f006e3d83",
+            "478c56f07f3a43e2acea22ffdd6264f4",
+            "24b483340fe447a99e27663218a2d688",
+            "bcf308dc785148639592df3423f6cf72",
+            "5d2301910e374d34a761a59fd663b1e7",
+            "1ce422ed477947d0b67efb99371b6a09",
+            "7a9a96738d3d4c95b89dd7789a01a7ac",
+            "0eb4b16306c34bc8b36eb57ebf508315",
+            "d82d167cdd8143ccadc66e549ecbd187",
+            "e1485e95de7347e08ba9796ea9a7941e",
+            "bde6bd59a6be4b248839a75909aeae12",
+            "a56b9161c35e43ae868af10259ef43ef",
+            "646063a9339d4655ab26c32d9e6bd53c",
+            "00cd814b7b36445bbb3e0eddbc247437",
+            "c18d6bcc23994244bf4f801f6d3b41c2"
+          ]
+        },
+        "id": "WDTNtDa0LkVR",
+        "outputId": "c7503ff8-6aae-47da-c175-16d2db7ac8e9"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/huggingface_hub/utils/_token.py:88: UserWarning: \n",
+            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
+            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
+            "You will be able to reuse this secret in all of your notebooks.\n",
+            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "1f55587dfe634d0fb1f471b5219ef800",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "tokenizer_config.json:   0%|          | 0.00/375 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "709a8cc4da114c79afa190079e13f4ca",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "spiece.model:   0%|          | 0.00/4.31M [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "5453c3b86d914d099a8ee027348e7f5a",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "special_tokens_map.json:   0%|          | 0.00/65.0 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "c5475fbeb0e642128f2d7e7fcb63f5f2",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "config.json:   0%|          | 0.00/696 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thouroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "5d2301910e374d34a761a59fd663b1e7",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "pytorch_model.bin:   0%|          | 0.00/2.33G [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "model_name = \"persiannlp/mt5-base-parsinlu-sentiment-analysis\"\n",
+        "tokenizer = MT5Tokenizer.from_pretrained(model_name)\n",
+        "model = MT5ForConditionalGeneration.from_pretrained(model_name)\n",
+        "\n",
+        "def run_model(context, text_b, **generator_args):\n",
+        "    # text_b = \"نظر شما چیست\"\n",
+        "\n",
+        "    input_ids = tokenizer.encode(context + \"<sep>\" + text_b, return_tensors=\"pt\")\n",
+        "    res = model.generate(input_ids, **generator_args)\n",
+        "    output = tokenizer.batch_decode(res, skip_special_tokens=True)\n",
+        "    # print(output)\n",
+        "    return output"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mp4WkRhta2sZ",
+        "outputId": "890642bc-d6b1-48b0-eda2-292b613c832a"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/transformers/generation/utils.py:1273: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
+            "  warnings.warn(\n",
+            "<ipython-input-19-88a788fcafe6>:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df_sentiment['General sentiment'] = df_sentiment['comment'].apply(lambda x: str(run_model(x , text_b)[0] ) )\n"
+          ]
+        }
+      ],
+      "source": [
+        "text_b = 'نظرت چیه'\n",
+        "df_sentiment['General sentiment'] = df_sentiment['comment'].apply(lambda x: str(run_model(x , text_b)[0] ) )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uG1G0-Xr17CG"
+      },
+      "source": [
+        "# Define Dataframes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {
+        "id": "C71NwV3y0X75"
+      },
+      "outputs": [],
+      "source": [
+        "year_limit = 1402\n",
+        "month_limit = 0\n",
+        "Rating_Threshold =3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "borw8zGgoYtp"
+      },
+      "outputs": [],
+      "source": [
+        "df_mixed=df_sentiment[df_sentiment['General sentiment']=='mixed']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {
+        "id": "kd7qNAq0u637"
+      },
+      "outputs": [],
+      "source": [
+        "df_non=df_sentiment[df_sentiment['General sentiment']=='no sentiment expressed']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "id": "qO8HaecBv5V0"
+      },
+      "outputs": [],
+      "source": [
+        "df_falseneg = df_sentiment[((df_sentiment['General sentiment']=='very negative') & (df_sentiment['rating']>Rating_Threshold)) |\n",
+        "             ((df_sentiment['General sentiment']=='negative') & (df_sentiment['rating']>Rating_Threshold))]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {
+        "id": "Lzkblz-S0sL5"
+      },
+      "outputs": [],
+      "source": [
+        "df_falsepos = df_sentiment[((df_sentiment['General sentiment']=='very positive') & (df_sentiment['rating']<Rating_Threshold))  |\n",
+        "             ((df_sentiment['General sentiment']=='positive') & (df_sentiment['rating']<Rating_Threshold) )]"
+      ]
     }
   ],
   "metadata": {
